--- a/src/app/main/office/office-detail/office-detail.component.html
+++ b/src/app/main/office/office-detail/office-detail.component.html
@@ -82,7 +82,7 @@
 
   <div class="row button-container">
     <ngx-fab-button tooltip="Create branch office" title="Create branch office" icon="plus-outline"
-      [link]="['../../../create']" status="primary" [queryParams]="{ parentId: office.identifier }"
+      [link]="['../../../create']" status="primary" 
       [permission]="{ id: 'office_offices', accessLevel: 'CHANGE' }"></ngx-fab-button>
 
     <span *ngIf="canDelete$ | async" (click)="deleteOffice()">
